fix: spacing

--- a/src/assets/scss/pages/_news-page.scss
+++ b/src/assets/scss/pages/_news-page.scss
@@ -97,7 +97,7 @@
 
   &__section {
     &:first-child {
-      margin-top: 10px;
+      margin-top: 30px;
 
       @include rmin(1200) {
         .nominal--tight__right {
