--- a/src/assets/scss/pages/_partners.scss
+++ b/src/assets/scss/pages/_partners.scss
@@ -28,10 +28,12 @@
   }
 
   &__slider {
-    height: 330px;
+    height: 250px;
+    //padding-bottom: 20px;
 
     @include r(768) {
       height: auto;
+      //padding-bottom: 10px;
     }
 
     &-wrapper {
@@ -44,7 +46,7 @@
 
     @include rmin(768) {
       .swiper-slide {
-        height: calc((100% - 30px) / 2);
+        height: calc((100% - 60px) / 2);
       }
     }
 
